Add book endpoints and auth helper
Introduce Book-related APIs and improve user context handling.

- Add BookController (POST /api/books) to create/persist books.
- Add BookCreateRequestDto and BookResponseDto with validation and mapping from Book entity.
- Implement BookService to persist books and reuse existing records by ISBN to avoid duplicates.
- Add CurrentUser component to resolve authenticated user's ID from SecurityContext with a fallback to the existing test user (1L).
- Update TreeController to use CurrentUser, add GET /api/trees to return the current user's trees, and remove the previous mock security helper.
- Update ForestController to fetch user trees via TreeService and return a summary (userId, treeCount, trees).
- Extend TreeService with getUserTrees to return detailed tree DTOs.

These changes wire up book creation and real user resolution for tree/forest operations and replace prior mocked authentication logic.